[gd_scene load_steps=3 format=3 uid="uid://crci03ygto3p0"]

[ext_resource type="FontFile" uid="uid://bwr73i28ligrq" path="res://Arts/Fonts/Ticketing.ttf" id="1_f2d5g"]
[ext_resource type="Script" path="res://Scripts/PlayerCharacter/UI/HUDScript.gd" id="1_lkp8p"]

[node name="HUD" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_lkp8p")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="CurrentStateLabelText" type="Label" parent="HBoxContainer/VBoxContainer2"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_f2d5g")
text = "Current State"

[node name="MoveSpeedLabelText" type="Label" parent="HBoxContainer/VBoxContainer2"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_f2d5g")
text = "Move Speed"

[node name="DesiredMoveSpeedLabelText" type="Label" parent="HBoxContainer/VBoxContainer2"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_f2d5g")
text = "Desired Move Speed"

[node name="VelocityLabelText" type="Label" parent="HBoxContainer/VBoxContainer2"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_f2d5g")
text = "Velocity"

[node name="NbJumpsInAirLabelText" type="Label" parent="HBoxContainer/VBoxContainer2"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_f2d5g")
text = "Nb Jumps In Air"

[node name="NbDashsAllowedLabelText" type="Label" parent="HBoxContainer/VBoxContainer2"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_f2d5g")
text = "Nb Dashs Allowed"

[node name="SlideWaitTimeLabelText" type="Label" parent="HBoxContainer/VBoxContainer2"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_f2d5g")
text = "Slide Wait Time"

[node name="DashWaitTimeLabelText" type="Label" parent="HBoxContainer/VBoxContainer2"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_f2d5g")
text = "Dash Wait Time"

[node name="KnockbackToolWaitTimeLabelText" type="Label" parent="HBoxContainer/VBoxContainer2"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_f2d5g")
text = "Knockback Tool Wait Time"

[node name="GrappleToolWaitTimeLabelText" type="Label" parent="HBoxContainer/VBoxContainer2"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_f2d5g")
text = "Grapple Tool Wait Time"

[node name="FramesPerSecondLabelText" type="Label" parent="HBoxContainer/VBoxContainer2"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_f2d5g")
text = "FPS"

[node name="ScoreContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -400.0
offset_top = 60.0
offset_right = -20.0
offset_bottom = 120.0
grow_horizontal = 0

[node name="ScoreLabel" type="Label" parent="ScoreContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_f2d5g")
theme_override_font_sizes/font_size = 24
text = "SCORE: 0"
horizontal_alignment = 2

[node name="SpeedLinesContrainer" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HealthBar" type="ProgressBar" parent="."]
custom_minimum_size = Vector2(400, 30)
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -400.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = 50.0
grow_horizontal = 0
value = 100.0
show_percentage = false

[node name="Label" type="Label" parent="HealthBar"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -43.0
offset_top = -13.0
offset_right = 43.0
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 2
theme_override_fonts/font = ExtResource("1_f2d5g")
theme_override_font_sizes/font_size = 16
text = "100 / 100"
horizontal_alignment = 1
vertical_alignment = 1
